precompiles/utils/macro/tests/compile-fail/precompile/discriminant/missing-param.stderr
error: The discriminant function must only take code address (H160) and remaining gas (u64) as parameters.
  --> tests/compile-fail/precompile/discriminant/missing-param.rs:25:2
   |
25 |     fn discriminant() -> Option<u64> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
